# ccaf-tableflow-aws_glue-snowflake-kickstarter

./: .gitignore  .terraform.lock.hcl  CHANGELOG.md  KNOWNISSUES.md  README.md  aws-iam-glue-setup.tf  aws-iam-snowflake-setup.tf  aws-secret_manager-confluent-secrets.tf  aws-secret_manager-snowflake-secrets.tf  confluent-cloud-provider-integration.tf  confluent-flink-setup.tf  confluent-kafka-setup.tf  confluent-schema_registry-setup.tf  confluent-tableflow-setup.tf  data.tf  deploy-terraform-locally.sh  deploy.sh  main.tf  output.tf  provder.tf  pyproject.toml  run-terraform-locally.sh  setup-aws-s3-tableflow-bucket.tf  setup-aws-s3.tf  setup-aws-secret_manager-confluent-secrets.tf  setup-aws-secret_manager.tf  setup-confluent-environment.tf  setup-confluent-flink.tf  setup-confluent-kafka.tf  setup-confluent-schema_registry.tf  setup-confluent-tableflow-aws-s3-glue.tf  setup-confluent-tableflow-restful_call.tf  setup-confluent-tableflow.tf  setup-flink-sql-example.tf  setup-snowflake-aws-s3-glue.tf  setup-snowflake-aws-s3.tf  setup-snowflake-grant_privileges.tf  setup-snowflake-objects.tf  setup-snowflake-permissions.tf  setup-snowflake-tableflow.tf  (+9 more)
.blog/: aws-secrets.md  confluent-trifecta.md  deploy-script-explanation.md  deploy-terraform-locally-script-explanation.md  setup-terraform-cloud.md  why-do-you-need-the-confluent-cloud-api-key.md
.github/actions/: action.yml
glue_s3_access_role_tf_module/: data.tf  main.tf  variables.tf
snowflake_glue_s3_access_role_tf_module/: main.tf
snowflake_s3_access_role_tf_module/: data.tf  main.tf  outputs.tf  variables.tf
(+51 files in other folders)
