[project]
name = "ccaf-tableflow-snowflake-kickstarter"
version = "0.01.00.000"
description = "Confluent Cloud for Apache Flink (CCAF) Tableflow Snowflake Kickstarter"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "aws-clients-python-lib>=0.2.2.0",
    "confluent-flink-table-api-python-plugin>=1.20.52",
]
